Version 2.2.030
    Fixed material based salvage permissions not functioning (Thanks Momshroom)

Version 2.2.029
    Fixed bug where block checks at world height would throw IndexOutOfBounds exceptions
    Added Eyeblossom to experience.yml for Herbalism xp
    Added Bonus_Drops.Herbalism.Eyeblossom to config.yml to enable double/triple drops for Eyeblossom
    Added Pale_Hanging_Moss to experience.yml for Herbalism xp
    Added Pale_Moss_Block to experience.yml for Herbalism xp
    Added Pale_Moss_Carpet to experience.yml for Herbalism xp
    Added Pale_Oak_Log to experience.yml for Woodcutting xp
    Added Pale_Oak_Wood to experience.yml for Woodcutting xp
    Added Stripped_Pale_Oak_Log to experience.yml for Woodcutting xp
    Added Stripped_Pale_Oak_Wood to experience.yml for Woodcutting xp
    Added Bonus_Drops.Woodcutting.Pale_Oak_Wood to config.yml to enable double/triple drops for Pale Oak Wood
    Added Bonus_Drops.Woodcutting.Pale_Oak_Log to config.yml to enable double/triple drops for Pale Oak Log
    Temporarily disabled the party item share functionality until it is fixed or potentially removed (see notes)

    Notes:
    This update adds support for the new stuff added by the "The Garden Awakens" Minecraft Update
    I noticed some issues with the party item share feature, so I've temporarily disabled it until those issues are addressed.
    I'm not even sure people like or dislike this feature, I'm personally not a fan.. I'd like to hear what you guys think.

Version 2.2.028
    Fixed stack overflow during ChunkUnloadEvent
    Fixed a bug where you had to wait to summon another COTW summon if one or more of them had died or otherwise expired before their time limit
    McMMOItemSpawnEvent#setItemStack being ignored (thanks galacticwarrior9)
    (API) Added McMMOPlayerMasterAnglerEvent (thanks bobcat4848)

Version 2.2.027
    Added Tridents / Crossbows to salvage.vanilla.yml config (see notes)