@@ -1,4 +1,5 @@
 Version 2.2.030
+    Fixed bug where Smelting permission was needed for Alchemy XP gain
     Fixed material based salvage permissions not functioning (Thanks Momshroom)
 
 Version 2.2.029
